data/all_generated_tests/raw_wast_tests/if_TypeMismatchinControlFlowInstructions_1959.wast
;; 10. **Test Description**: Create a test where the `if` block type suggests `[ ] -> [ ]`, but due to control flow branching, it incorrectly acts on the input stack height expecting preloaded values.     - **Constraint Checked**: Enforce control flow branching to correctly handle input types stack as specified.     - **Expected Behavior**: Such mismatches should lead to runtime errors or validation traps if not correctly handled.  By generating these types of tests, differential behaviors in the implementations regarding type mismatches in control flow instructions can be exposed effectively.

(assert_invalid
  (module
    (func $test-branching-input-stack-mismatch
      (block
        (i32.const 1)
        (if (result)
          (then (i32.const 2) (drop))
          (else (drop))
        )
      )
    )
  )
  "type mismatch"
)